rag evaluation changes

--- a/notebooks/rag_eval_dataset_source_gen - local.ipynb
+++ b/notebooks/rag_eval_dataset_source_gen - local.ipynb
@@ -127,12 +127,12 @@
    "metadata": {
     "id": "mDkDS5YYthSP",
     "ExecuteTime": {
-     "end_time": "2025-04-15T10:46:46.712597Z",
-     "start_time": "2025-04-15T10:46:46.706474Z"
+     "end_time": "2025-04-15T16:47:34.389260Z",
+     "start_time": "2025-04-15T16:47:34.383688Z"
     }
    },
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -145,12 +145,12 @@
    "metadata": {
     "id": "ODygJUQcdlag",
     "ExecuteTime": {
-     "end_time": "2025-04-15T10:46:49.239894Z",
-     "start_time": "2025-04-15T10:46:49.227626Z"
+     "end_time": "2025-04-15T16:47:38.679847Z",
+     "start_time": "2025-04-15T16:47:38.670476Z"
     }
    },
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -165,8 +165,8 @@
     "id": "4S0weXxZd8nk",
     "outputId": "cb087344-3da9-424f-879d-ae841247f75c",
     "ExecuteTime": {
-     "end_time": "2025-04-15T10:46:50.562194Z",
-     "start_time": "2025-04-15T10:46:50.554815Z"
+     "end_time": "2025-04-15T16:47:41.050873Z",
+     "start_time": "2025-04-15T16:47:41.044884Z"
     }
    },
    "outputs": [
@@ -182,14 +182,14 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 5
   },
   {
    "metadata": {
     "id": "gcNla6v-mgxf",
     "ExecuteTime": {
-     "end_time": "2025-04-15T10:46:54.032389Z",
-     "start_time": "2025-04-15T10:46:54.026913Z"
+     "end_time": "2025-04-15T16:47:44.460022Z",
+     "start_time": "2025-04-15T16:47:44.455207Z"
     }
    },
    "cell_type": "code",
@@ -205,7 +205,7 @@
     "  return ', '.join(lst)"
    ],
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -267,12 +267,12 @@
    "metadata": {
     "id": "SNcNnM4gdooK",
     "ExecuteTime": {
-     "end_time": "2025-04-15T10:47:08.490505Z",
-     "start_time": "2025-04-15T10:47:08.480506Z"
+     "end_time": "2025-04-15T16:47:46.728185Z",
+     "start_time": "2025-04-15T16:47:46.721031Z"
     }
    },
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -287,8 +287,8 @@
     "id": "J14KCx_Qvdr4",
     "outputId": "ccfd6a10-0613-4b37-d832-bd6dcfeaccfb",
     "ExecuteTime": {
-     "end_time": "2025-04-15T10:47:13.651712Z",
-     "start_time": "2025-04-15T10:47:13.642901Z"
+     "end_time": "2025-04-15T16:47:52.712221Z",
+     "start_time": "2025-04-15T16:47:52.705221Z"
     }
    },
    "outputs": [
@@ -339,7 +339,7 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -362,18 +362,18 @@
    "metadata": {
     "id": "vVByjOsAqUnr",
     "ExecuteTime": {
-     "end_time": "2025-04-15T10:49:09.153999Z",
-     "start_time": "2025-04-15T10:49:09.146125Z"
+     "end_time": "2025-04-15T16:47:55.300825Z",
+     "start_time": "2025-04-15T16:47:55.293540Z"
     }
    },
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-15T10:49:11.535090Z",
-     "start_time": "2025-04-15T10:49:11.524066Z"
+     "end_time": "2025-04-15T16:47:58.858220Z",
+     "start_time": "2025-04-15T16:47:58.848656Z"
     }
    },
    "cell_type": "code",
@@ -385,18 +385,18 @@
        "100"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-15T10:49:24.613005Z",
-     "start_time": "2025-04-15T10:49:24.603127Z"
+     "end_time": "2025-04-15T16:48:02.059817Z",
+     "start_time": "2025-04-15T16:48:02.051249Z"
     }
    },
    "cell_type": "code",
@@ -413,18 +413,18 @@
        "  'price': 'LKR 6,350.00'}}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-15T11:44:50.046962Z",
-     "start_time": "2025-04-15T11:44:50.040924Z"
+     "end_time": "2025-04-15T16:48:09.023934Z",
+     "start_time": "2025-04-15T16:48:09.019694Z"
     }
    },
    "cell_type": "code",
@@ -477,13 +477,13 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-15T10:53:36.004821Z",
-     "start_time": "2025-04-15T10:53:35.994001Z"
+     "end_time": "2025-04-15T16:48:14.900268Z",
+     "start_time": "2025-04-15T16:48:14.891120Z"
     }
    },
    "cell_type": "code",
@@ -504,7 +504,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 18
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -534,12 +534,12 @@
    "metadata": {
     "id": "6im3WNIF70Md",
     "ExecuteTime": {
-     "end_time": "2025-04-15T11:47:37.705600Z",
-     "start_time": "2025-04-15T11:47:37.701407Z"
+     "end_time": "2025-04-15T16:48:19.180767Z",
+     "start_time": "2025-04-15T16:48:19.176094Z"
     }
    },
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -561,7 +561,7 @@
     "  prompt = PromptTemplate(input_variables=[\"product_profile\"], template=prompt_template)\n",
     "\n",
     "  agent = ChatOllama(\n",
-    "    base_url=\"http://216.81.245.215:11434\",\n",
+    "    base_url=\"http://216.81.248.11:11434\",\n",
     "    model=\"llama3.3:70b-instruct-q4_K_M\",\n",
     "    temperature=0,\n",
     "  )\n",
@@ -575,19 +575,36 @@
    "metadata": {
     "id": "uAx4gTGH7-aT",
     "ExecuteTime": {
-     "end_time": "2025-04-15T13:31:01.278367Z",
-     "start_time": "2025-04-15T13:31:01.267815Z"
+     "end_time": "2025-04-15T19:45:36.065061Z",
+     "start_time": "2025-04-15T19:45:36.058064Z"
     }
    },
    "outputs": [],
-   "execution_count": 29
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-15T19:45:42.771542Z",
+     "start_time": "2025-04-15T19:45:42.766054Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "product_docs_1 = product_docs[:25]\n",
+    "product_docs_2 = product_docs[25:50]\n",
+    "product_docs_3 = product_docs[50:75]\n",
+    "product_docs_4 = product_docs[75:]"
+   ],
+   "outputs": [],
+   "execution_count": 21
   },
   {
    "cell_type": "code",
    "source": [
     "product_descriptions = []\n",
     "\n",
-    "for doc in product_docs:\n",
+    "for doc in product_docs_4:\n",
     "  agent_response = product_copywriter_agent(doc[\"template\"], product_copywrite_prompt)\n",
     "  product_description = {\n",
     "      \"id\": doc[\"metadata\"][\"id\"],\n",
@@ -600,7 +617,8 @@
    "metadata": {
     "id": "gxPeciyp8Uzh",
     "ExecuteTime": {
-     "start_time": "2025-04-15T13:31:03.624632Z"
+     "end_time": "2025-04-15T21:21:05.502860Z",
+     "start_time": "2025-04-15T21:00:27.760535Z"
     }
    },
    "outputs": [
@@ -608,123 +626,111 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Product description for product 1 generated\n",
-      "Product description for product 2 generated\n",
-      "Product description for product 3 generated\n",
-      "Product description for product 4 generated\n",
-      "Product description for product 5 generated\n",
-      "Product description for product 6 generated\n",
-      "Product description for product 7 generated\n",
-      "Product description for product 8 generated\n",
-      "Product description for product 9 generated\n",
-      "Product description for product 10 generated\n",
-      "Product description for product 11 generated\n",
-      "Product description for product 12 generated\n",
-      "Product description for product 13 generated\n",
-      "Product description for product 14 generated\n",
-      "Product description for product 15 generated\n",
-      "Product description for product 16 generated\n",
-      "Product description for product 17 generated\n",
-      "Product description for product 18 generated\n",
-      "Product description for product 19 generated\n",
-      "Product description for product 20 generated\n",
-      "Product description for product 21 generated\n",
-      "Product description for product 22 generated\n",
-      "Product description for product 23 generated\n",
-      "Product description for product 24 generated\n",
-      "Product description for product 25 generated\n",
-      "Product description for product 26 generated\n",
-      "Product description for product 27 generated\n",
-      "Product description for product 28 generated\n",
-      "Product description for product 29 generated\n",
-      "Product description for product 30 generated\n",
-      "Product description for product 31 generated\n",
-      "Product description for product 32 generated\n",
-      "Product description for product 33 generated\n",
-      "Product description for product 34 generated\n",
-      "Product description for product 35 generated\n",
-      "Product description for product 36 generated\n",
-      "Product description for product 37 generated\n",
-      "Product description for product 38 generated\n",
-      "Product description for product 39 generated\n",
-      "Product description for product 40 generated\n",
-      "Product description for product 41 generated\n",
-      "Product description for product 42 generated\n",
-      "Product description for product 43 generated\n",
-      "Product description for product 44 generated\n",
-      "Product description for product 45 generated\n",
-      "Product description for product 46 generated\n",
-      "Product description for product 47 generated\n",
-      "Product description for product 48 generated\n",
-      "Product description for product 49 generated\n",
-      "Product description for product 50 generated\n",
-      "Product description for product 51 generated\n",
-      "Product description for product 52 generated\n",
-      "Product description for product 53 generated\n",
-      "Product description for product 54 generated\n",
-      "Product description for product 55 generated\n",
-      "Product description for product 56 generated\n",
-      "Product description for product 57 generated\n",
-      "Product description for product 58 generated\n",
-      "Product description for product 59 generated\n",
-      "Product description for product 60 generated\n",
-      "Product description for product 61 generated\n",
-      "Product description for product 62 generated\n",
-      "Product description for product 63 generated\n",
-      "Product description for product 64 generated\n",
-      "Product description for product 65 generated\n",
-      "Product description for product 66 generated\n",
-      "Product description for product 67 generated\n",
-      "Product description for product 68 generated\n",
-      "Product description for product 69 generated\n",
-      "Product description for product 70 generated\n",
-      "Product description for product 71 generated\n",
-      "Product description for product 72 generated\n",
-      "Product description for product 73 generated\n",
-      "Product description for product 74 generated\n",
-      "Product description for product 75 generated\n",
       "Product description for product 76 generated\n",
       "Product description for product 77 generated\n",
       "Product description for product 78 generated\n",
-      "Product description for product 79 generated\n"
+      "Product description for product 79 generated\n",
+      "Product description for product 80 generated\n",
+      "Product description for product 81 generated\n",
+      "Product description for product 82 generated\n",
+      "Product description for product 83 generated\n",
+      "Product description for product 84 generated\n",
+      "Product description for product 85 generated\n",
+      "Product description for product 86 generated\n",
+      "Product description for product 87 generated\n",
+      "Product description for product 88 generated\n",
+      "Product description for product 89 generated\n",
+      "Product description for product 90 generated\n",
+      "Product description for product 91 generated\n",
+      "Product description for product 92 generated\n",
+      "Product description for product 93 generated\n",
+      "Product description for product 94 generated\n",
+      "Product description for product 95 generated\n",
+      "Product description for product 96 generated\n",
+      "Product description for product 97 generated\n",
+      "Product description for product 98 generated\n",
+      "Product description for product 99 generated\n",
+      "Product description for product 100 generated\n"
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 44
   },
   {
    "cell_type": "code",
    "source": "len(product_descriptions)",
    "metadata": {
-    "id": "WkFC6oqm8hGz"
+    "id": "WkFC6oqm8hGz",
+    "ExecuteTime": {
+     "end_time": "2025-04-15T21:21:20.203013Z",
+     "start_time": "2025-04-15T21:21:20.194439Z"
+    }
    },
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "output_file = \"/content/drive/MyDrive/4th year research/Development/data/product_descriptions.json\""
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "metadata": {
-    "id": "53JRZ-de8ocd"
-   },
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 45
   },
   {
    "cell_type": "code",
+   "source": "output_file = \"./product_descriptions.json\"",
+   "metadata": {
+    "id": "53JRZ-de8ocd",
+    "ExecuteTime": {
+     "end_time": "2025-04-15T21:21:22.538398Z",
+     "start_time": "2025-04-15T21:21:22.531485Z"
+    }
+   },
+   "outputs": [],
+   "execution_count": 46
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-15T21:21:27.354006Z",
+     "start_time": "2025-04-15T21:21:27.348678Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
-    "with open(output_file, \"w\") as file:\n",
-    "    json.dump(product_descriptions, file, indent=4)\n",
+    "def append_to_json(file_path, new_data):\n",
+    "    # Read existing data\n",
+    "    try:\n",
+    "        with open(file_path, 'r') as file:\n",
+    "            data = json.load(file)\n",
+    "    except (FileNotFoundError, json.JSONDecodeError):\n",
+    "        data = []  # Initialize as list if file doesn't exist or is empty\n",
     "\n",
-    "print(f\"Product description written to {output_file}\")"
+    "    # Append new data\n",
+    "    data.append(new_data)\n",
+    "\n",
+    "    # Write back to file\n",
+    "    with open(file_path, 'w') as file:\n",
+    "        json.dump(data, file, indent=4)"
    ],
+   "outputs": [],
+   "execution_count": 48
+  },
+  {
    "metadata": {
-    "id": "Z5sGVvpR8pKj"
+    "ExecuteTime": {
+     "end_time": "2025-04-15T21:21:29.380210Z",
+     "start_time": "2025-04-15T21:21:29.356812Z"
+    }
    },
-   "execution_count": null,
-   "outputs": []
+   "cell_type": "code",
+   "source": "append_to_json(output_file, product_descriptions)",
+   "outputs": [],
+   "execution_count": 49
   }
  ]
 }
